--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <title>Title</title>
     <link rel="stylesheet" type="text/css" href="css/fullpage.css" media="all" />
     <style type="text/css">
-        .side_nav li i{ position:absolute; right:3px; top:8px; background:url(img/nav_pot.png) no-repeat 0 -12px; height:4px; width:4px; overflow:hidden;border:0 none!important;}
+        .side_nav li i{ 
+            position:absolute; 
+            right:3px; top:8px; 
+            background:url(img/nav_pot.png) no-repeat 0 -12px; height:4px; width:4px; 
+            overflow:hidden;border:0 none!important;}
         .side_nav li.on i{background:url(img/nav_pot.png) no-repeat; width:10px; height:10px; top:5px; right:0;}
     </style>
 </head>
